--- a/ASS1.html
+++ b/ASS1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Club</title>
-
+  <link rel="stylesheet" href="ass2.css">
 </head>
 <body>
 <header>
@@ -18,11 +18,6 @@
       <li><a href="register.html">Registration</a></li>
     </ul>
   </nav>
-  <div class="social-media">
-    <a href="https://facebook.com" target="_blank">Facebook</a>
-    <a href="https://twitter.com" target="_blank">Twitter</a>
-    <a href="https://instagram.com" target="_blank">Instagram</a>
-  </div>
 </header>
 
 <main>
