--- a/guide_roles.html
+++ b/guide_roles.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roles of heroes - Dota 2</title>
-
+  <link rel="stylesheet" href="ass2.css">
 </head>
 <body>
 <header>
