--- a/register.html
+++ b/register.html
@@ -3,38 +3,298 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration - Game Club</title>
+  <title>Single Page Registration, Login, and Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <style>
+    body {
+      background: #1B1B1B;
+      color: #fff;
+    }
+    .card { margin-top: 50px; border-radius: 10px; }
+    .hidden { display: none; }
+    .error-message { color: #dc3545; font-size: 0.85rem; margin-top: 5px; }
+  </style>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const isLoggedIn = localStorage.getItem("isLoggedIn") === "true";
+      const loginButton = document.querySelector('.btn-outline-info');
 
+      if (isLoggedIn) {
+        showProfile();
+        loginButton.textContent = "Logout";
+        loginButton.onclick = function() { logout(); };
+        loginButton.href = "#";
+      } else {
+        showRegistration();
+        loginButton.textContent = "Login";
+        loginButton.href = "register.html";
+      }
+    });
+
+    function showRegistration() {
+      document.getElementById("registration-section").classList.remove("hidden");
+      document.getElementById("login-section").classList.add("hidden");
+      document.getElementById("profile-section").classList.add("hidden");
+    }
+
+    function showLogin() {
+      document.getElementById("registration-section").classList.add("hidden");
+      document.getElementById("login-section").classList.remove("hidden");
+      document.getElementById("profile-section").classList.add("hidden");
+    }
+
+    function showProfile() {
+      document.getElementById("registration-section").classList.add("hidden");
+      document.getElementById("login-section").classList.add("hidden");
+      document.getElementById("profile-section").classList.remove("hidden");
+      const firstName = localStorage.getItem("userFirstName");
+      const lastName = localStorage.getItem("userLastName");
+      document.getElementById("welcome-message").textContent = `Welcome, ${firstName} ${lastName}!`;
+    }
+
+    function registerUser(event) {
+      event.preventDefault();
+
+      const firstName = document.getElementById('first_name').value.trim();
+      const lastName = document.getElementById('last_name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirm_password').value;
+
+      const nameRegex = /^(?=.*[A-Z])[A-Za-z]+$/;
+      const isAdmin = email === "admin@gmail.com" && password === "admin123";
+
+      if (!firstName.match(nameRegex)) {
+        alert("First name must contain at least 1 capital and only letters.");
+        return;
+      }
+      if (!lastName.match(nameRegex)) {
+        alert("Last name must contain at least 1 capital and only letters.");
+        return;
+      }
+      if (!isAdmin) {
+        const passwordRegex = /^(?=.*[A-Z])(?=.*[!@#$%^&*._])(?=.*\d)[A-Za-z\d!@#$%^&*._]{8,}$/;
+        if (!password.match(passwordRegex)) {
+          alert("Password must be at least 8 characters, contain at least one uppercase letter, one digit, and one symbol.");
+          return;
+        }
+      }
+      if (password !== confirmPassword) {
+        alert("Passwords do not match.");
+        return;
+      }
+
+      if (!firstName || !lastName || !email || !password || password !== confirmPassword) {
+        alert("Please fill out all fields correctly.");
+        return;
+      }
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+
+      users.push({ username: email, firstName, lastName, email, password, isAdmin });
+      localStorage.setItem("users", JSON.stringify(users));
+
+      localStorage.setItem("userFirstName", firstName);
+      localStorage.setItem("userLastName", lastName);
+      localStorage.setItem("userEmail", email);
+      localStorage.setItem("userPassword", password);
+      localStorage.setItem("isLoggedIn", "true");
+
+      alert("Registration successful!");
+      showProfile();
+    }
+
+    function loginUser(event) {
+      event.preventDefault();
+      const email = document.getElementById('login_email').value.trim();
+      const password = document.getElementById('login_password').value;
+
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      const user = users.find(u => u.email === email && u.password === password);
+
+      if (user) {
+        localStorage.setItem("isLoggedIn", "true");
+        localStorage.setItem("userEmail", user.email);
+
+        if (user.isAdmin) {
+          showAdminPanel();
+        } else {
+          showProfile();
+        }
+      } else {
+        alert("Invalid email or password.");
+      }
+    }
+    function showAdminPanel() {
+      document.getElementById("admin-panel-section").classList.remove("hidden");
+      document.getElementById("profile-section").classList.add("hidden");
+      document.getElementById("registration-section").classList.add("hidden");
+      document.getElementById("login-section").classList.add("hidden");
+
+      populateUserTable();
+    }
+
+    function populateUserTable() {
+      const userTableBody = document.getElementById("user-table-body");
+      userTableBody.innerHTML = "";
+
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      users.forEach((user, index) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+            <td><input type="text" value="${user.username}" data-index="${index}" onchange="updateUser(event, 'username')"></td>
+            <td><input type="text" value="${user.firstName}" data-index="${index}" onchange="updateUser(event, 'firstName')"></td>
+            <td><input type="text" value="${user.lastName}" data-index="${index}" onchange="updateUser(event, 'lastName')"></td>
+            <td><input type="email" value="${user.email}" data-index="${index}" onchange="updateUser(event, 'email')"></td>
+            <td><input type="password" value="${user.password}" data-index="${index}" onchange="updateUser(event, 'password')"></td>
+            <td>
+                <button onclick="deleteUser(${index})" class="btn btn-danger btn-sm">Delete</button>
+            </td>
+        `;
+        userTableBody.appendChild(row);
+      });
+    }
+
+    function updateUser(event, field) {
+      const index = event.target.getAttribute("data-index");
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      users[index][field] = event.target.value;
+      localStorage.setItem("users", JSON.stringify(users));
+    }
+
+    function deleteUser(index) {
+      const users = JSON.parse(localStorage.getItem("users")) || [];
+      if (confirm("Are you sure you want to delete this user?")) {
+        users.splice(index, 1);
+        localStorage.setItem("users", JSON.stringify(users));
+        populateUserTable();
+      }
+    }
+
+    function searchUsers() {
+      const searchInput = document.getElementById("searchInput").value.toLowerCase();
+      const filteredUsers = validUsers.filter(user =>
+        user.username.toLowerCase().includes(searchInput) ||
+        user.firstName.toLowerCase().includes(searchInput) ||
+        user.lastName.toLowerCase().includes(searchInput) ||
+        user.email.toLowerCase().includes(searchInput)
+      );
+
+      const resultsContainer = document.getElementById("results");
+      resultsContainer.innerHTML = '';
+
+      if (filteredUsers.length > 0) {
+        filteredUsers.forEach(user => {
+          const userElement = document.createElement("div");
+          userElement.textContent = `${user.username} - ${user.firstName} ${user.lastName} (${user.email})`;
+          resultsContainer.appendChild(userElement);
+        });
+      } else {
+        resultsContainer.textContent = 'No users found.';
+      }
+    }
+
+    function logout() {
+      localStorage.removeItem("isLoggedIn");
+      showLogin();
+      document.querySelector('.btn-outline-info').textContent = "Login";
+      document.querySelector('.btn-outline-info').href = "register.html";
+    }
+
+  </script>
 </head>
 <body>
+
 <header>
-  <h1>Registration for the tournament</h1>
-  <nav>
-    <ul>
-      <li><a href="ASS1.html">Home</a></li>
-      <li><a href="tournaments.html">Tournaments</a></li>
-      <li><a href="schedule.html">Game Schedule</a></li>
-      <li><a href="register.html">Registration</a></li>
-    </ul>
+  <nav class="navbar navbar-expand-md bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Game Club</a>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a href="ASS1.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
+        <li class="nav-item"><a href="schedule.html" class="nav-link">Game Schedule</a></li>
+        <li class="nav-item"><a href="#" class="nav-link btn-outline-info">Login</a></li>
+      </ul>
+    </div>
   </nav>
 </header>
 
-<main>
-  <section>
-    <form action="#" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required pattern="[A-Za-zА-Яа-я\s]+" title="The name must contain only letters"><br><br>
-      <label for="team">Team name:</label>
-      <input type="text" id="team" name="team" required><br><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required><br><br>
-      <input type="submit" value="Register">
-    </form>
-  </section>
-</main>
 
-<footer>
-  <p>&copy; 2024 Game Club</p>
-</footer>
+<div class="container mt-5">
+  <div id="registration-section" class="card bg-light text-dark hidden">
+    <div class="card-body">
+      <h3 class="card-title text-center">Registration</h3>
+      <form id="registration-form" onsubmit="registerUser(event)">
+        <div class="mb-3">
+          <input type="text" id="first_name" class="form-control" placeholder="First Name" required>
+        </div>
+        <div class="mb-3">
+          <input type="text" id="last_name" class="form-control" placeholder="Last Name" required>
+        </div>
+        <div class="mb-3">
+          <input type="email" id="email" class="form-control" placeholder="Email" required>
+        </div>
+        <div class="mb-3">
+          <input type="password" id="password" class="form-control" placeholder="Password" required minlength="8">
+        </div>
+        <div class="mb-3">
+          <input type="password" id="confirm_password" class="form-control" placeholder="Confirm Password" required minlength="8">
+        </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-dark">Register</button>
+        </div>
+      </form>
+      <p class="text-center mt-3">Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
+    </div>
+  </div>
+
+  <div id="login-section" class="card bg-light text-dark hidden">
+    <div class="card-body">
+      <h3 class="card-title text-center">Login</h3>
+      <form id="login-form" onsubmit="loginUser(event)">
+        <div class="mb-3">
+          <input type="email" id="login_email" class="form-control" placeholder="Email" required>
+        </div>
+        <div class="mb-3">
+          <input type="password" id="login_password" class="form-control" placeholder="Password" required>
+        </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+      </form>
+      <p class="text-center mt-3">Don't have an account? <a href="#" onclick="showRegistration()">Register</a></p>
+    </div>
+  </div>
+
+  <div id="profile-section" class="card bg-light text-dark hidden">
+    <div class="card-body text-center">
+      <h3 id="welcome-message"></h3>
+      <button onclick="logout()" class="btn btn-danger mt-3">Logout</button>
+    </div>
+  </div>
+</div>
+
+<div id="admin-panel-section" class="card bg-light text-dark hidden">
+  <div class="card-body">
+    <h3 class="card-title text-center">Admin Panel</h3>
+    <input type="text" id="searchInput" oninput="searchUsers()" placeholder="Search users...">
+    <div id="results"></div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Username</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+        <th>Password</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody id="user-table-body"></tbody>
+    </table>
+  </div>
+</div>
+
+
 </body>
 </html>
