--- a/schedule.html
+++ b/schedule.html
@@ -4,45 +4,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Schedule - Game Club</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<header>
-  <h1>Game Schedule</h1>
-  <nav>
-    <ul>
-      <li><a href="ASS1.html">Home</a></li>
-      <li><a href="tournaments.html">Tournaments</a></li>
-      <li><a href="schedule.html">Game Schedule</a></li>
-      <li><a href="register.html">Registration</a></li>
-    </ul>
-  </nav>
+
+<header class="bg-dark text-light py-3">
+  <div class="container">
+    <h1 class="text-center">Game Schedule</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Game Club</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="ASS1.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="tournaments.html">Tournaments</a></li>
+            <li class="nav-item"><a class="nav-link active" href="schedule.html">Game Schedule</a></li>
+            <li class="nav-item"><a class="nav-link" href="register.html">Registration</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 </header>
 
-<main>
+<main class="container my-5">
   <section>
-    <table>
+    <table class="table table-striped table-hover">
+      <thead>
       <tr>
         <th>Match</th>
         <th>Date</th>
         <th>Time</th>
       </tr>
+      </thead>
+      <tbody>
       <tr>
-        <td>Team A vs Team B</td>
-        <td>October 18, 2024</td>
+        <td>Team Liquid vs OG</td>
+        <td>August 14, 2025</td>
+        <td>08:00</td>
+      </tr>
+      <tr>
+        <td>Neon Esports vs Team Spirit</td>
+        <td>November 4, 2024</td>
+        <td>10:00</td>
+      </tr>
+      <tr>
+        <td>LGD Gaming vs Execration</td>
+        <td>December 15, 2024</td>
+        <td>12:00</td>
+      </tr>
+      <tr>
+        <td>Virtus.pro vs Team Secret</td>
+        <td>July 25, 2025</td>
         <td>14:00</td>
       </tr>
       <tr>
-        <td>Team C vs Team D</td>
-        <td>October 20, 2024</td>
+        <td>BOOM Esports vs Evil Geniuses</td>
+        <td>June 30, 2025</td>
         <td>16:00</td>
       </tr>
+      <tr>
+        <td>Alliance vs NAVI</td>
+        <td>May 19, 2024</td>
+        <td>18:00</td>
+      </tr>
+      <tr>
+        <td>TNC Predator vs Thunder</td>
+        <td>April 1, 2024</td>
+        <td>20:00</td>
+      </tr>
+      <tr>
+        <td>Vici Gaming vs Fnatic</td>
+        <td>March 10, 2024</td>
+        <td>22:00</td>
+      </tr>
+      <tr>
+        <td>Nemiga Gaming vs Tundra Esports</td>
+        <td>February 28, 2024</td>
+        <td>00:00</td>
+      </tr>
+      <tr>
+        <td>BetBoom Team vs Invictus</td>
+        <td>January 22, 2024</td>
+        <td>06:00</td>
+      </tr>
+      </tbody>
     </table>
   </section>
 </main>
 
-<footer>
+<footer class="bg-dark text-light text-center py-3">
   <p>&copy; 2024 Game Club</p>
 </footer>
+
+
+
 </body>
 </html>
