--- a/tournaments.html
+++ b/tournaments.html
@@ -4,48 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tournaments - Game Club</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="ass2.css">
 </head>
 <body>
-<header>
-  <h1>Tournaments</h1>
-  <nav>
-    <ul>
-      <li><a href="ASS1.html">Home</a></li>
-      <li><a href="tournaments.html">Tournaments</a></li>
-      <li><a href="schedule.html">Game Schedule</a></li>
-      <li><a href="register.html">Registration</a></li>
-    </ul>
-  </nav>
+
+<header class="bg-dark text-light py-3">
+  <div class="container">
+    <h1 class="text-center">Tournaments</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Game Club</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="ASS1.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="tournaments.html">Tournaments</a></li>
+            <li class="nav-item"><a class="nav-link" href="schedule.html">Game Schedule</a></li>
+            <li class="nav-item"><a class="nav-link" href="register.html">Registration</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 </header>
 
-<main>
-  <section>
-    <div class="tournament">
-      <h3>Autumn tournament Dota 2</h3>
-      <p>Date: October 15, 2024</p>
-      <p>Prize fund: $5000</p>
+<main class="container my-5">
+  <section class="row">
+    <div class="col-lg-6 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h3>Autumn Tournament Dota 2</h3>
+          <p>Date: October 15, 2024</p>
+          <p>Prize fund: $5000</p>
+        </div>
+      </div>
     </div>
-    <div class="tournament">
-      <h3>Winter tournament Dota 2</h3>
-      <p>Date: December 20, 2024</p>
-      <p>Prize fund: $8000</p>
+    <div class="col-lg-6 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h3>Winter Tournament Dota 2</h3>
+          <p>Date: December 20, 2024</p>
+          <p>Prize fund: $8000</p>
+        </div>
+      </div>
     </div>
   </section>
 
   <section>
-    <h2>Past tournaments</h2>
-    <div class="past-tournaments">
-      <h3>Summer tournament Dota 2</h3>
-      <p>Date: July 10, 2024</p>
-      <p>Winner: Team X</p>
+    <h2>Past Tournaments</h2>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-body">
+            <h3>Summer Tournament Dota 2</h3>
+            <p>Date: July 10, 2024</p>
+            <p>Winner: Team Spirit</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  <footer class="bg-dark text-light text-center py-3">
+    <p>&copy; 2024 Game Club</p>
+  </footer>
 
 </main>
 
-<footer>
-  <p>&copy; 2024 Game Club</p>
-</footer>
+
+
+
+
 </body>
 </html>
